fix some layout alignment in 768px responsive

--- a/src/components/featureTabs/FeatureTabs.css
+++ b/src/components/featureTabs/FeatureTabs.css
@@ -80,3 +80,8 @@
   background-color: hsl(231, 69%, 60%);
   border-radius: 0 100px 100px 0;
 }
+@media only screen and (max-width: 768px) {
+  .tabcontent {
+    flex-direction: column;
+  }
+}
